--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,6 +1,7 @@
 name: Build and Deploy to GCR
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -10,8 +11,8 @@ env:
   GKE_CLUSTER: work-cluster
   GKE_ZONE: us-central1-c
   DEPLOYMENT_NAME: github-actions-gke
-  IMAGE: nginx:latest
-  TAG: 1.0.2
+  IMAGE: github-actions-gke-image
+  TAG: ${{ github.sha }}
 
 jobs:
   setup-build-publish-deploy:
@@ -34,9 +35,12 @@ jobs:
       - name: Configure Docker
         run: |-
           gcloud --quiet auth configure-docker
+      - name: Get GKE Credentials
+        run: |-
+          gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
       - name: Build Docker Image
         run: |-
-          docker build --tag "gcr.io/$PROJECT_ID/$IMAGE:$TAG" 
+          docker build --tag "gcr.io/$PROJECT_ID/$IMAGE:$TAG" .
       - name: Publish Docker Image to GCR
         run: |-
           docker push "gcr.io/$PROJECT_ID/$IMAGE:$TAG"
